--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,41 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'Fixel';
+  src: url('../shared/fonts/FixelText-Light.otf') format('opentype');
+  font-weight: 300;
+  font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: 'Fixel';
+  src: url('../shared/fonts/FixelText-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-display: swap;
 }
 
-html,
+@font-face {
+  font-family: 'Fixel';
+  src: url('../shared/fonts/FixelText-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fixel';
+  src: url('../shared/fonts/FixelText-SemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fixel';
+  src: url('../shared/fonts/FixelText-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-display: swap;
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fixel', sans-serif;
+  font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
