--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,8 +34,50 @@
 }
 
 body {
+  padding: 12px;
+  overflow-x: hidden;
   font-family: 'Fixel', sans-serif;
-  font-weight: 300;
+  font-feature-settings: 'liga' off, 'clig' off;
+  background: #EFEFEF;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body[data-scroll-locked] {
+  padding: 12px !important;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #C1D5FF;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #EFEFEF;
+}
+
+button {
+  all: unset;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  user-select: none;
+  text-align: center;
+  border: none;
+  background: none;
+  font: inherit;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
