--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -1,6 +1,13 @@
 .text {
-  font-size: 0.875rem;
   font-weight: 400;
+}
+
+.baseSize {
+  font-size: 0.875rem;
+}
+
+.lgSize {
+  font-size: 1rem;
 }
 
 .darkBlueColor {
