--- a/src/shared/ui/components/header/header.module.scss
+++ b/src/shared/ui/components/header/header.module.scss
@@ -13,7 +13,7 @@
 
 body[data-scroll-locked] {
   .header {
-    width: 96.2%;
+    width: calc(100% - 66px);
   }
 }
 
@@ -59,6 +59,12 @@ body[data-scroll-locked] {
     display: flex;
     align-items: center;
     gap: 4px;
+  }
+
+  button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
 }
 
