--- a/src/shared/ui/kit/tag/tag.module.scss
+++ b/src/shared/ui/kit/tag/tag.module.scss
@@ -1,10 +1,12 @@
 .layout {
   border-radius: 100px;
-  background: rgba(193, 213, 255, 0.50);
+  background: #E0EAFF;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   width: max-content;
+  display: flex;
   line-height: normal;
+  backdrop-filter: blur(20px);
   padding: 6px 20px;
 }
