--- a/src/shared/ui/kit/title/title.module.scss
+++ b/src/shared/ui/kit/title/title.module.scss
@@ -54,6 +54,10 @@
   color: #3D4D7C;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 @media (max-width: 768px) {
   .oneSize {
     font-size: 2.813rem;
