--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,41 +1,11 @@
-@font-face {
-  font-family: 'Fixel';
-  src: url('../shared/fonts/FixelText-Light.otf') format('opentype');
-  font-weight: 300;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fixel';
-  src: url('../shared/fonts/FixelText-Regular.otf') format('opentype');
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fixel';
-  src: url('../shared/fonts/FixelText-Medium.otf') format('opentype');
-  font-weight: 500;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fixel';
-  src: url('../shared/fonts/FixelText-SemiBold.otf') format('opentype');
-  font-weight: 600;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fixel';
-  src: url('../shared/fonts/FixelText-Bold.otf') format('opentype');
-  font-weight: 700;
-  font-display: swap;
-}
+@import "fonts.css";
+@import 'reset-css';
+@import "local-reset.css";
 
 body {
   padding: 12px;
   overflow-x: hidden;
+  font-style: normal;
   font-family: 'Fixel', sans-serif;
   font-feature-settings: 'liga' off, 'clig' off;
   background: #EFEFEF;
@@ -59,33 +29,4 @@ body[data-scroll-locked] {
 
 ::-webkit-scrollbar-track {
   background-color: #EFEFEF;
-}
-
-button {
-  all: unset;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  user-select: none;
-  text-align: center;
-  border: none;
-  background: none;
-  font: inherit;
-  padding: 0;
-  margin: 0;
-  outline: none;
-  box-sizing: border-box;
-}
-
-a {
-  all: unset;
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-a:focus,
-a:focus-visible {
-  outline: none;
 }
