order product action and dialog in success

--- a/src/features/order-product-form/components/order-form/order-form.module.scss
+++ b/src/features/order-product-form/components/order-form/order-form.module.scss
@@ -10,6 +10,18 @@
   margin-bottom: 26px;
 }
 
+.dialogContent {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  gap: 12px;
+  text-align: center;
+
+  p {
+    line-height: normal;
+  }
+}
+
 .servicesLayout {
   margin: 26px 0;
 }
