--- a/src/shared/ui/kit/checkbox/checkbox.module.scss
+++ b/src/shared/ui/kit/checkbox/checkbox.module.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   transition: all 300ms ease-in-out;
 
-  &:focus {
+  &:focus, &:hover {
     box-shadow: 0 0 0 2px #C1D5FF;
   }
 
