--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -30,6 +30,10 @@
   color: #3D4D7C;
 }
 
+.darkPurple {
+  color: #560D46
+}
+
 .normalWeight {
   font-weight: 400;
 }
@@ -40,6 +44,10 @@
 
 .thinWeight {
   font-weight: 300;
+}
+
+.extraThinWeight {
+  font-weight: 200;
 }
 
 .uppercase {
