--- a/src/app/marketing-consulting/components/marketing-consulting-package/marketing-consulting-package.module.scss
+++ b/src/app/marketing-consulting/components/marketing-consulting-package/marketing-consulting-package.module.scss
@@ -35,11 +35,11 @@
 }
 
 .stepOneImg {
-  top: -40px;
+  top: -30px;
 }
 
 .stepThreeImg {
-  top: -40px;
+  top: -30px;
 }
 
 .priceLayout {
@@ -64,7 +64,7 @@
 }
 
 .priceText {
-  font-size: 2.375rem;
+  font-size: 2.375rem !important;
 }
 
 @media (max-width: 1024px) {
@@ -79,18 +79,13 @@
   }
 
   .stepTwoImg {
-    width: 216px;
-    height: 216px;
+    width: 248px;
+    height: 248px;
   }
 
   .stepThreeImg {
-    width: 350px;
-    height: 350px;
-  }
-
-  .stepFourImg {
-    width: 217px;
-    height: 217px;
+    width: 224px;
+    height: 224px;
   }
 }
 
@@ -101,6 +96,15 @@
 
   .desc {
     width: 100%;
+  }
+
+  .requestLayout {
+    align-items: center;
+    gap: 12px;
+
+    button {
+      width: 100%;
+    }
   }
 
   .header {
