--- a/src/shared/ui/kit/title/title.module.scss
+++ b/src/shared/ui/kit/title/title.module.scss
@@ -38,6 +38,10 @@
   font-weight: 400;
 }
 
+.weightThin {
+  font-weight: 300;
+}
+
 .darkBlueColor {
   color: #0B1635;
 }
@@ -56,6 +60,15 @@
 
 .darkPurple {
   color: #560D46;
+}
+
+.blackYellow {
+  color: #242102;
+}
+
+.opacityBlackYellow {
+  color: #242102;
+  opacity: 0.7;
 }
 
 .uppercase {
