--- a/src/shared/ui/components/flow-slider/flow-slider.module.scss
+++ b/src/shared/ui/components/flow-slider/flow-slider.module.scss
@@ -118,9 +118,27 @@
   overflow: visible;
 }
 
+.desktopFlow {
+  display: block;
+}
+
+.mobileFlow {
+  display: none;
+}
+
 @media (max-width: 1024px) {
   .slider {
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .desktopFlow {
+    display: none;
+  }
+
+  .mobileFlow {
     display: flex;
     flex-direction: column;
     gap: 30px;
