Added inner cases pages

--- a/src/shared/ui/components/hero-banner/hero-banner.module.scss
+++ b/src/shared/ui/components/hero-banner/hero-banner.module.scss
@@ -6,7 +6,8 @@
   flex-direction: column;
   position: relative;
   padding: 28px;
-
+  background-size: cover;
+  background-position: center;
   div {
     margin-top: auto;
   }
