--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -14,8 +14,20 @@
   font-size: 1rem;
 }
 
+.xlSize {
+  font-size: 1.125rem;
+}
+
 .headingSize {
   font-size: 2.375rem;
+}
+
+.deepBlack {
+  color: #000000;
+}
+
+.darkGrayColor {
+  color: #101828;
 }
 
 .darkBlueColor {
