--- a/src/shared/ui/kit/button/button.module.scss
+++ b/src/shared/ui/kit/button/button.module.scss
@@ -3,6 +3,11 @@
   padding: 10px 20px;
   transition: all 300ms ease-in-out;
   font-size: 0.875rem;
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+  }
 }
 
 .btnWhite {
