--- a/src/app/business-consulting/components/business-consulting-package/business-consulting-package.module.scss
+++ b/src/app/business-consulting/components/business-consulting-package/business-consulting-package.module.scss
@@ -54,7 +54,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  align-items: end;
+  align-items: flex-end;
 
   button {
     display: flex;
