--- a/src/app/marketing-consulting/components/marketing-consulting-package/marketing-consulting-package.module.scss
+++ b/src/app/marketing-consulting/components/marketing-consulting-package/marketing-consulting-package.module.scss
@@ -54,7 +54,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  align-items: end;
+  align-items: flex-end;
 
   button {
     display: flex;
