--- a/src/shared/ui/kit/button/button.module.scss
+++ b/src/shared/ui/kit/button/button.module.scss
@@ -3,6 +3,7 @@
   padding: 10px 20px;
   transition: all 300ms ease-in-out;
   font-size: 0.875rem;
+  font-weight: 500;
 
   &:disabled {
     cursor: not-allowed;
