added img, fixed responsive moments

--- a/src/shared/ui/components/general-request-form/general-request-form.module.scss
+++ b/src/shared/ui/components/general-request-form/general-request-form.module.scss
@@ -33,6 +33,10 @@
     flex-direction: column;
   }
 
+  .title {
+    width: initial !important;
+  }
+
   .text {
     width: initial !important;
   }
