--- a/src/shared/ui/components/flow-slider/flow-slider.module.scss
+++ b/src/shared/ui/components/flow-slider/flow-slider.module.scss
@@ -2,6 +2,14 @@
   margin-top: 30px;
 }
 
+.text {
+  max-width: 400px;
+}
+
+.lineHeightText {
+  line-height: normal;
+}
+
 .slideImgLayout {
   border-radius: 12px;
   width: 468px;
