--- a/src/shared/ui/kit/title/title.module.scss
+++ b/src/shared/ui/kit/title/title.module.scss
@@ -50,6 +50,14 @@
   color: #0d2056;
 }
 
+.coralColor {
+  color: #480808;
+}
+
+.opacityCoralColor {
+  color: rgba(72, 8, 8, 0.70);
+}
+
 .blackColor {
   color: rgba(0, 0, 0, 0.7);
 }
