Added Pricing page

--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -62,6 +62,15 @@
   color: #ffffff;
 }
 
+.lightGreen {
+  color: #0A4A19;
+  opacity: 0.7;
+}
+
+.green {
+  color: #0A4A19;
+}
+
 .normalWeight {
   font-weight: 400;
 }
