--- a/src/shared/ui/kit/title/title.module.scss
+++ b/src/shared/ui/kit/title/title.module.scss
@@ -12,8 +12,8 @@
 
 .fourSize {
   font-size: 2rem;
-  span{
-    span{
+  span {
+    span {
       font-size: 58px;
       @media (max-width: 768px) {
         font-size: 45px;
@@ -63,7 +63,7 @@
 }
 
 .opacityCoralColor {
-  color: rgba(72, 8, 8, 0.70);
+  color: rgba(72, 8, 8, 0.7);
 }
 
 .blackColor {
@@ -100,11 +100,18 @@
   color: #ffffff;
 }
 
+.lightGreen {
+  color: #0a4a19;
+  opacity: 0.7;
+}
+
+.green {
+  color: #0a4a19;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
-
-
 
 @media (max-width: 768px) {
   .oneSize {
