--- a/src/shared/ui/kit/dialog/dialog.module.scss
+++ b/src/shared/ui/kit/dialog/dialog.module.scss
@@ -19,6 +19,7 @@
   justify-content: center;
   align-items: center;
   transform: translate(-50%, -50%);
+  max-width: 800px;
   width: 800px;
   height: 420px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -49,12 +50,16 @@
 }
 
 .contentLayout {
-  padding: 50px 0;
   position: relative;
   display: flex;
   height: 100%;
+  width: 100%;
   flex-direction: column;
   text-align: center;
+}
+
+.layoutClass {
+  padding: 50px 0;
 }
 
 .close {
@@ -67,7 +72,7 @@
     width: 90%;
   }
 
-  .contentLayout {
+  .layoutClass {
     padding: 20px 12px;
   }
 
