--- a/src/core/auth/components/login-dialog/login-dialog.module.scss
+++ b/src/core/auth/components/login-dialog/login-dialog.module.scss
@@ -8,6 +8,10 @@
   text-align: left;
 }
 
+.registerHeight {
+  height: 480px;
+}
+
 @media (max-width: 768px) {
   .content {
     padding: 20px 16px;
