--- a/src/core/auth/components/register-form/register-form.module.scss
+++ b/src/core/auth/components/register-form/register-form.module.scss
@@ -11,10 +11,17 @@
   height: 100%;
 }
 
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+}
+
 .formInner {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 18px;
 }
 
 .icon {
