--- a/src/app/pricing/what-determines/what-determines.module.scss
+++ b/src/app/pricing/what-determines/what-determines.module.scss
@@ -60,13 +60,35 @@
       }
     }
     .linkButton {
-      margin-top: -47px;
       box-sizing: border-box;
+      margin-bottom: 15px;
       @media (max-width: 768px) {
         width: 100%;
         margin-top: 0;
         justify-content: space-between;
       }
     }
+  }
+}
+
+.linkBtnDesktop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.linkBtnMobile {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .linkBtnMobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .linkBtnDesktop {
+    display: none;
   }
 }
