--- a/src/shared/ui/kit/tabs/tabs.module.scss
+++ b/src/shared/ui/kit/tabs/tabs.module.scss
@@ -28,3 +28,9 @@
 .trigger[data-state="active"] {
   background: #E0EAFF;
 }
+
+@media (max-width: 768px) {
+  .list {
+    padding: 4px 18px 4px 4px;
+  }
+}
