--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -94,3 +94,13 @@
 .capitalize {
   text-transform: capitalize;
 }
+
+.underline {
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+  text-transform: uppercase;
+}
