--- a/src/features/account/components/account-layout/account-layout.module.scss
+++ b/src/features/account/components/account-layout/account-layout.module.scss
@@ -4,3 +4,24 @@
   background-color: #FFFFFF;
   margin-top: 6px;
 }
+
+.btnLayout {
+  display: none;
+  justify-content: end;
+  align-items: flex-end;
+}
+
+.btn {
+  margin-top: 30px;
+  display: flex;
+}
+
+@media (max-width: 768px) {
+  .layout {
+    padding: 22px 12px;
+  }
+
+  .btnLayout {
+    display: flex;
+  }
+}
