--- a/src/features/account/components/tab-heading/tab-heading.module.scss
+++ b/src/features/account/components/tab-heading/tab-heading.module.scss
@@ -8,3 +8,11 @@
     line-height: normal;
   }
 }
+
+@media (max-width: 768px) {
+  .heading {
+    flex-direction: column;
+    gap: 12px;
+    justify-content: start;
+  }
+}
