--- a/src/shared/ui/components/table/table.module.scss
+++ b/src/shared/ui/components/table/table.module.scss
@@ -1,28 +1,19 @@
+.tableWrapper {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .table {
-  border-collapse: separate;
+  width: 100%;
+  border-collapse: collapse;
   border-spacing: 0;
   border-radius: 8px;
-  display: grid;
   overflow: hidden;
-  width: 100%;
+  table-layout: fixed;
 }
 
 .headerGroup {
   background-color: #FAFAFA;
-  padding: 7.75px;
-  display: flex;
-  width: 100%;
-}
-
-.rowGroup {
-  display: flex;
-  width: 100%;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-}
-
-.row {
-  padding: 22px;
-  text-align: center;
 }
 
 .header {
@@ -30,11 +21,38 @@
   font-size: 1.125rem;
   font-weight: 500;
   text-align: center;
+  padding: 12px;
+  min-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.rowGroup {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.cell {
+  padding: 16px;
+  text-align: center;
+  min-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .noData {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  padding: 16px;
   height: 300px;
+}
+
+@media (max-width: 1024px) {
+  .table {
+    table-layout: auto;
+  }
+
+  .header,
+  .cell {
+    white-space: nowrap;
+    min-width: 150px;
+  }
 }
