--- a/src/shared/ui/kit/button/button.module.scss
+++ b/src/shared/ui/kit/button/button.module.scss
@@ -41,3 +41,9 @@
     background: transparent;
   }
 }
+
+.btnSecondary {
+  background: #FAFAFA;
+  border: 1px solid #FAFAFA;
+  color: #0D2056;
+}
