--- a/src/app/account/components/hero/hero.module.scss
+++ b/src/app/account/components/hero/hero.module.scss
@@ -23,8 +23,22 @@
   display: flex;
   flex-direction: column;
   gap: 18px;
+  z-index: 2;
 
   h5 {
     opacity: 0.7;
+  }
+}
+
+@media (max-width: 768px) {
+  .layout {
+    height: 308px;
+  }
+
+  .image {
+    width: 288px;
+    height: 288px;
+    top: -50px;
+    right: -70px;
   }
 }
