--- a/src/features/account/components/tab-heading/tab-heading.module.scss
+++ b/src/features/account/components/tab-heading/tab-heading.module.scss
@@ -1,6 +1,6 @@
 .heading {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
 
   .text {
@@ -13,6 +13,6 @@
   .heading {
     flex-direction: column;
     gap: 12px;
-    justify-content: start;
+    justify-content: flex-start;
   }
 }
