--- a/src/features/cart/components/empty-cart-dialog/empty-cart-dialog.module.scss
+++ b/src/features/cart/components/empty-cart-dialog/empty-cart-dialog.module.scss
@@ -25,6 +25,12 @@
   }
 }
 
+.layoutDialog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 600px) {
   .layout {
     width: 100%;
