--- a/src/shared/ui/kit/button/button.module.scss
+++ b/src/shared/ui/kit/button/button.module.scss
@@ -42,6 +42,24 @@
   }
 }
 
+.btnTransparent {
+  color: #0B1635;
+  font-feature-settings: 'liga' off, 'clig' off;
+  font-style: normal;
+  font-weight: 400;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+  text-transform: uppercase;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 .btnSecondary {
   background: #FAFAFA;
   border: 1px solid #FAFAFA;
