--- a/src/features/policies/components/info-card/info-card.module.scss
+++ b/src/features/policies/components/info-card/info-card.module.scss
@@ -6,5 +6,14 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+.fullWidth {
   width: 100%;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
