--- a/src/app/components/stories/stories.module.scss
+++ b/src/app/components/stories/stories.module.scss
@@ -66,13 +66,9 @@
 }
 
 .storyCardImage {
+  object-fit: cover;
   width: 100%;
-  height: 294px;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  border-radius: 12px;
+  height: 100%;
 }
 
 .storyTag {
