--- a/src/app/market-cases/[slug]/components/hero/hero.module.scss
+++ b/src/app/market-cases/[slug]/components/hero/hero.module.scss
@@ -1,15 +1,81 @@
-.metallicSphere {
+.layout {
+  height: 460px;
+  border-radius: 12px;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  overflow: hidden;
+  padding: 28px;
+}
+
+.background {
   position: absolute;
-  right: -120px;
-  top: -250px;
-  z-index: -1;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+  text-align: left;
+  width: 100%;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  margin-bottom: 51px;
+}
+
+.separator {
+  background: rgba(255, 255, 255, 0.86);
+}
+
+.scrollText {
+  margin-top: 14px;
+  color: rgba(255, 255, 255, 0.70);
+}
+
+.btn {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.contactUs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contactBtnDesktop {
+  display: flex;
+}
+
+.contactBtnMobile {
+  display: none;
 }
 
 @media (max-width: 768px) {
-  .metallicSphere {
-    width: 325px;
-    height: 325px;
-    right: -90px;
-    top: -200px;
+  .layout {
+    height: 556px;
+  }
+
+  .title {
+    gap: 14px;
+    line-height: normal;
+    margin-bottom: 14px;
+  }
+
+  .contactBtnDesktop {
+    display: none;
+  }
+
+  .contactBtnMobile {
+    margin-top: 20px;
+    display: flex;
   }
 }
