--- a/src/shared/ui/components/header/header.module.scss
+++ b/src/shared/ui/components/header/header.module.scss
@@ -9,24 +9,19 @@
   justify-content: space-between;
   background: transparent;
   padding: 12px 30px;
+  transition: all 0.3s;
 }
 
 .header.scrolled {
   top: 0;
   background: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, .15);
-  margin-left: 12px;
-  width: calc(100% - 84px);
 }
 
 
 body[data-scroll-locked] {
   .header {
     width: calc(100% - 66px);
-  }
-
-  .header.scrolled {
-    width: calc(100% - 90px);
   }
 }
 
