--- a/src/features/order-product-form/components/order-form/order-form.module.scss
+++ b/src/features/order-product-form/components/order-form/order-form.module.scss
@@ -10,6 +10,13 @@
   margin-bottom: 26px;
 }
 
+.reCaptcha {
+  margin-top: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .dialogLayout {
   display: flex;
   flex-direction: column;
