--- a/src/shared/ui/kit/text/text.module.scss
+++ b/src/shared/ui/kit/text/text.module.scss
@@ -2,6 +2,10 @@
   font-weight: 400;
 }
 
+.blackYellow {
+  color: #242102;
+}
+
 .smSize {
   font-size: 0.75rem;
 }
@@ -55,7 +59,7 @@
 }
 
 .blackPurple {
-  color: #410D56;
+  color: #410d56;
 }
 
 .umber {
@@ -67,12 +71,12 @@
 }
 
 .lightGreen {
-  color: #0A4A19;
+  color: #0a4a19;
   opacity: 0.7;
 }
 
 .green {
-  color: #0A4A19;
+  color: #0a4a19;
 }
 
 .normalWeight {
